<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.ui.fragment.LoginPageFragment">

    <LinearLayout
        android:id="@+id/loginContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/linear_layout_login_custom_border"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/fira_sans_medium"
            android:gravity="center"
            android:paddingVertical="4dp"
            android:text="@string/login"
            android:textColor="#2D2D2D"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/MyFilledBox"
            app:boxStrokeColor="#595959"
            app:endIconMode="clear_text"
            app:endIconTint="@color/middle_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input_text"
                app:boxStrokeColor="#595959"
                app:endIconTint="@color/middle_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/fira_sans_regular"
                android:hint="@string/username"
                android:textColor="@color/middle_gray"
                android:textCursorDrawable="@null"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyFilledBox"
            app:boxStrokeColor="#595959"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/middle_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_text"
                app:boxStrokeColor="#595959"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/fira_sans_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/middle_gray"
                android:textCursorDrawable="@null"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/rounded_container_fragment_exchange_rate"
            android:fontFamily="@font/fira_sans_medium"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress_bar_style"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>